@@ -1,0 +1,280 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u97d3\u570b\u5c0f\u8aaa\u5bb6\u97d3\u6c5f\u7372\u8afe\u8c9d\u723e\u6587\u5b78\u734e\uff1a\u7236\u89aa\u9a5a\u8a1d\u5f97\u300c\u597d\u50cf\u4e16\u754c\u88ab\u985b\u5012\u4e86\u300d", "description": "\u97d3\u570b\u5c0f\u8aaa\u5bb6\u97d3\u6c5f\u7372\u8afe\u8c9d\u723e\u6587\u5b78\u734e\uff1a\u7236\u89aa\u9a5a\u8a1d\u5f97\u300c\u597d\u50cf\u4e16\u754c\u88ab\u985b\u5012\u4e86\u300d", "url": "https://www.famechos.me/news/\u97d3\u570b\u5c0f\u8aaa\u5bb6\u97d3\u6c5f\u7372\u8afe\u8c9d\u723e\u6587\u5b78\u734e\uff1a\u7236\u89aa\u9a5a\u8a1d\u5f97\u300c\u597d\u50cf\u4e16\u754c\u88ab\u985b\u5012\u4e86\u300d.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-13T13:24:00.954556+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」.html"/>
+<meta name="description" content="韓國小說家韓江獲諾貝爾文學獎，父親驚訝得「好像世界被顛倒了」。韓江的獲獎消息震驚文壇，外界紛紛猜測其獲獎原因。">
+<meta name="keywords" content="韓江，諾貝爾文學獎，韓國小說家，文學獎，獲獎消息">
+
+	<link rel="stylesheet" href="../main-nav.css">
+	<link rel="stylesheet" href="../main-content.css">
+	<link rel="stylesheet" href="../main-small.css">
+	<link rel="stylesheet" href="../post.css">
+	<link rel="stylesheet" href="../main-footer.css">
+	<link rel="stylesheet" href="../news.css">
+ 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"> 
+	<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」.html" />
+        <meta property="og:title" content="韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」" />
+        <meta property="og:description" content="韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」" />
+        <meta property="twitter:description" content="韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+	<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+	<meta property="og:type" content="article" />
+	<meta name="robots" content="index, follow" />
+	<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+	<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+          
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+  
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+          
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+      
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」</h1>
+	</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">13/10/2024</p>
+        </div>
+	<p>我記得那天晚上，得知韓國小說家韓江獲諾貝爾獎的消息時，我最初以為是假新聞。</p>
+<p>韓江的獲獎標誌著韓國歷史上的第一次諾貝爾文學獎得主。我感到不知所措，驚喜所淹沒。</p>
+<p>我回憶了那天晚上，一位朋友打電話給我，詢問我的反應。我說：“你在說什麼？你不是被一些假新聞誤導了嗎？”</p>
+<p>我從未料到韓江會如此快地獲獎。我以為她可能需要再等幾年。瑞典學院的評委經常選擇年長的作家或詩人來獲獎。</p>
+<p>事實上，我已經忘記了獎項公告，正在準備就寢時接到了電話。</p><h2>韓勝源評論女兒的文學風格</h2>
+<p>韓勝源在接受當地電台採訪時，表達了他對女兒獲得獎項的驚訝。他說，這個消息讓他感到“好像世界被顛倒了”。</p>
+<p>他評論女兒的文學風格時，認為她以“非常深刻、美麗和悲傷的方式”描繪悲劇。他認為，這是評委們所欣賞的。</p>
+<p>韓勝源指出，女兒的作品中，沒有什麼可丟棄的。每一部都是傑作。他認為，這不是因為他是作家的父親，而是因為她的作品確實優秀。</p>
+<p>韓勝源還提到了光州事件和濟州四三事件的聯繫，認為女兒的作品對於那些因國家暴力和世界而感到創傷的脆弱的人類，有一種愛。</p>
+<p>以下是韓勝源的部分作品：</p>
+<ul>
+<li>《阿濟阿濟巴拉阿濟》</li>
+<li>《秋史》</li>
+<li>《茶山的一生》</li>
+<li>《人類的道路》</li>
+</ul>
+<p>韓勝源是一位多產的作家，自1968年首次以小說家身份出道以來，一直在創作。</p>
+<h2>扈賢珠粉絲遭受攻擊</h2>
+<p>韓國藝人扈賢珠的粉絲在要求合照時遭到攻擊。這一事件引起了廣泛關注和爭議。</p>
+<h2>北韓領導人胞妹發出警告：再有南韓無人機入侵將引發災難</h2>
+<p>北韓領導人胞妹發出警告，若再發現南韓無人機將引發災難。這一警告引起了國際社會的關注和擔憂。</p>
+<h2>北韓發射20個垃圾氣球飛往南韓</h2>
+<p>根據聯合參謀本部的消息，北韓向南韓發射20個垃圾氣球。這一事件引起了南韓的抗議和譴責。</p>
+<h2>據北韓媒體報導，首爾派遣無人機飛越平壤上空</h2>
+<p>北韓媒體報導稱首爾派無人機飛越平壤。這一報導引起了國際社會的關注和爭議。</p>
+<h2>預計2024年底舉行南韓、美國、日本峰會</h2>
+<p>南韓、美國、日本峰會預計於2024年底舉行。這一峰會將討論地區安全和合作等問題。</p>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SaJjB3-cUNU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+      
+      <div class ="related-news-box">
+        
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓寒獲諾貝爾文學獎後，作品在韓國網路書店狂銷13萬冊！.html">韓寒獲諾貝爾文學獎後，作品在韓國網路書店狂銷13萬冊！</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生.html">文學界新星！韓國作家韓江勇奪諾貝爾文學獎，揭開她傳奇的一生</a>
+        </p>
+                
+	<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/韓國文壇歷史性一刻！首位韓國人韓江奪諾貝爾文學獎：這份榮耀不只屬於我.html">韓國文壇歷史性一刻！首位韓國人韓江奪諾貝爾文學獎：這份榮耀不只屬於我</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+      
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
