@@ -5,7 +5,7 @@
   <title>Famechos</title>
   <link>https://www.famechos.me/</link>
   <description>Famechos - News Article</description>
-  <lastBuildDate>Sun, 13 Oct 2024 13:22:34 +0800</lastBuildDate>
+  <lastBuildDate>Sun, 13 Oct 2024 13:24:12 +0800</lastBuildDate>
 
   <item>
   <title>KPOP界大事！RIIZE昇瀚回歸、防弹少年团金碩珍新單曲、aespa登頂iTunes榜單</title>
@@ -189,5 +189,11 @@ YG娛樂旗下的新人女團BABYMONSTER（韓語：베이비몬스터）將於1
   <description>2024諾貝爾文學獎得主韓江：誰是她？。。韓江是第一位韓國諾貝爾文學獎得主，1970年出生於韓國西南部城市光州。後來，她搬到首爾，並畢業於延世大學，主修韓國語言和文學。。...</description>
   <category>K-Pop</category>
   <pubDate>Sun, 13 Oct 2024 13:22:34 +0800</pubDate>
+</item><item>
+  <title>韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」</title>
+  <link>https://www.famechos.me/news/韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」.html</link>
+  <description>小說家最初以為諾貝爾獎是假新聞。我記得那天晚上，得知韓國小說家韓江獲諾貝爾獎的消息時，我最初以為是假新聞。...</description>
+  <category>K-Pop</category>
+  <pubDate>Sun, 13 Oct 2024 13:24:12 +0800</pubDate>
 </item></channel>
 </rss>
