@@ -188,4 +188,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/韓國小說家韓江獲諾貝爾文學獎：父親驚訝得「好像世界被顛倒了」.html</ns0:loc>
+    <ns0:lastmod>2024-10-13T13:24:12+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
